<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.ibm.mcp</groupId>
    <artifactId>mcp-language-tools-parent</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>MCP Language Tools Parent</name>
    <description>Parent POM for MCP Language Tools</description>

    <modules>
        <module>core</module>
        <module>admin</module>
        <module>extensions/xml</module>
        <module>extensions/microprofile</module>
        <module>extensions/quarkus</module>
        <module>extensions/java</module>
        <module>extensions/javascript</module>
        <module>extensions/angular</module>
        <module>extensions/python</module>
        <module>extensions/rust</module>
        <module>extensions/c</module>
        <module>extensions/go</module>
        <module>extensions/dart</module>
        <module>extensions/yaml</module>
        <module>extensions/lua</module>
        <module>extensions/php</module>
        <module>extensions/kotlin</module>
        <module>extensions/dockerfile</module>
        <module>extensions/liberty</module>
        <module>extensions/jakarta</module>
        <module>extensions/csharp</module>
        <module>extensions/web</module>
        <module>extensions/bash</module>
        <module>extensions/ruby</module>
        <module>extensions/svelte</module>
        <module>extensions/vue</module>
        <module>extensions/elm</module>
        <module>extensions/fortran</module>
        <module>extensions/swift</module>
        <module>extensions/zig</module>
        <module>extensions/haskell</module>
        <module>extensions/scala</module>
        <module>extensions/clojure</module>
        <module>extensions/elixir</module>
        <module>extensions/erlang</module>
        <module>extensions/ocaml</module>
        <module>extensions/fsharp</module>
        <module>extensions/terraform</module>
        <module>extensions/latex</module>
        <module>extensions/markdown</module>
        <module>extensions/toml</module>
        <module>extensions/nix</module>
        <module>extensions/r</module>
        <module>extensions/perl</module>
        <module>extensions/crystal</module>
        <module>extensions/ada</module>
        <module>extensions/julia</module>
        <module>extensions/ansible</module>
        <module>extensions/pascal</module>
        <module>dev</module>
        <module>integration-tests</module>
    </modules>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <quarkus.version>3.33.2</quarkus.version>
        <lsp4j.version>1.0.0</lsp4j.version>
        <quarkus-mcp-server.version>2.0.0.Beta2</quarkus-mcp-server.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.quarkus.platform</groupId>
                <artifactId>quarkus-bom</artifactId>
                <version>${quarkus.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>io.quarkus</groupId>
                    <artifactId>quarkus-maven-plugin</artifactId>
                    <version>${quarkus.version}</version>
                    <extensions>true</extensions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.11.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.1.2</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
